# solar_project

./: README.md  init.py
solarapp-project/: .env  package-lock.json  package.json  tailwind.config.ts
solarapp-project/src/app/: layout.tsx  page.tsx
solarapp-project/src/app/api/[lat]/[lng]/: route.ts
solarapp-project/src/app/random/: page.tsx
solarapp-project/src/components/: insignts.tsx  layout.tsx  locations.tsx  map.tsx
solarapp-project/src/components/fragments/: footer.tsx  header-layout.tsx  header.tsx  locationItem.tsx
solarapp-project/src/components/pageTransition/: pageTransition.tsx
solarapp-project/src/components/screen/: home.tsx
solarapp-project/src/context/: locationsContext.ts
solarapp-project/src/provider/: LocationsProvider.tsx  MapProvider.tsx  Providers.tsx
solarapp-project/src/repo/: repo.ts  serverActionsRepo.ts
solarapp-project/src/types/: requestsTypes.ts  types.ts
solarapp-project/src/utils/: icon-user.json  utils.ts
solarbackend/: Cargo.toml
solarbackend/src/: handlers.rs  main.rs  model.rs  routes.rs
